@@ -7,10 +7,12 @@ NEW FUNCTIONS ADDED:
 
 UPDATED FUNCTIONS:
   * MultMerge() offers an option to define a merging column.
-
+  * TextToTable() gets a new argument "check.names".
+  * Quantile returns a named result.
   
 BUGFIXES:
-  * 
+  * Bug in Zodiac() led to a wrong zodiac for June 21. (Credits to pmarkun)
+
 
 
 DescTools 0.99.38 (2020-09-06)
